2004-09-25  Roland Illig  <roland.illig@gmx.de>

	* view.c (display): Recognize "+\bo" as a list item in nroff mode.
	Display "_\b_" correctly in both colors.

	* view.c (hex_search): Added const qualifier.
	* boxes.c (display_unit): Likewise.
	* command.c (examine_cd): Likewise. Additionally used g_strdup to
	not accidentally modify an environment variable.
	* complete.c (command_completion_function): Likewise.
	(filename_completion_function): Likewise. (try_complete): Likewise.
	(variable_completion_function): Likewise.
	* file.c (check_hardlinks): Likewise.
	* find.c (find_do_view_edit): Likewise. (find_file): Likewise.
	* global.h (home_dir): Likewise.
	* main.c (get_parent_dir_name): Likewise. (init_xterm_support):
	Likewise. (OS_Setup): Likewise.
	* menu.c (create_menu): Likewise.
	* mountlist.c (xatoi): Likewise. (read_filesystem_list): Likewise.
	* poptconfig.c (poptReadDefaultConfig): Likewise.
	* popthelp.c (showHelpIntro): Likewise.
	* rxvt.c (look_for_rxvt_extensions): Likewise.
	* slint.c (has_colors): Likewise.
	* subshell.c (check_sid): Likewise.
	* user.c (check_format_var): Likewise.
	* widget.c (radio_callback): Likewise.

2004-09-25  Pavel Shirshov  <pavelsh@mail.ru>

	* boxes.c (configure_vfs): g_free handles NULL argument too,
        no need for the comparison.
	* cmd.c (set_panel_filter_to): Likewise.
	    (do_link): Likewise.
	    (quick_cd_cmd): Likewise.
	* color.c (done_colors): Likewise.
	* dialog.c (destroy_dlg): Likewise.
	* dir.c (alloc_dir_copy): Likewise.
	* ext.c (flush_extension_file): Likewise.
	* file.c (copy_file_file): Likewise.
    	    (panel_operate): Likewise.
	* hotlist.c (remove_group): Likewise.
    	    (remove_from_hotlist): Likewise.
    	    (done_hotlist): Likewise.
	* main.c (main): Likewise.
	* setup.c (panel_load_setup): Likewise.
	* tree.c (tree_destroy): Likewise.
    	    (show_tree): Likewise.
	* user.c (user_menu_cmd): Likewise.
	* utilunix.c (i_cache_add): Likewise.
    	    (putenv): Likewise.